--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <img src="logo.png" alt="Logo">
+            <img src="logo.png" alt="NGO">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ngos.html">NGOs</a></li>
